--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -72,5 +72,12 @@
     "addFact": "Додати факт",
     "createdSuccessfully": "Факт успішно створено",
     "creationFailed": "Не вдалося створити факт"
-  }
+  },
+  "partnersPage": {
+    "subtitle": "Тобі чи твоїй компанії відгукується наш проєкт? Наперед тиснемо руку та мріємо про спільну залученість. Приєднуйся!",
+    "content": "Соціальні місіонери, які прагнуть кращої України. Незламні україноцентристи, які разом з проєктом будують круті ком’юніті патріотів та знавців української історії. Профі та експерти, які діляться власною експертизою з нами тут і зараз. В IT, юриспруденції, видавничій справі, менеджменті. Донатори та спонсори, завдяки внескам яких проєкт пульсує, а історія вже промовляє в міських просторах. Всі ці щирі та добрі люди, круті та ефективні компанії – наші партнери і справжні друзі, які розділяють наші цінності.",
+    "subTitle": "Ми вдячні кожному. Ми поруч з кожним. Бо стріткодимо разом!",
+    "logoAlt": "лого"
+  },
+  "switchLanguage": "Переключити мову"
 }
